# trajectory_optimizer_ROS2

./: .gitignore  CMakeLists.txt  package.xml
data/: cones.csv  curvature.csv  filtered_curvature.csv  freeSpace.csv  midline_points.csv  problem.csv  x_opt.csv
include/: GRO.hh  TRO.hh  optimizer.hh
launch/: all_in_one.launch.py  midline.launch.py  optimizer.launch.py  tro.launch.py
params/: gro.yaml  optimizer.yaml  tro.yaml
src/: main.cpp  midline.cpp  opt.cpp
src/utils/: GRO.cpp  SGSmooth.cpp  TRO.cpp  optimizer.cpp
