<?xml version="1.0"?>
<package format="3">
  <name>trajectory_optimizer</name>
  <version>0.0.0</version>
  <description>Trajectory optimization package</description>

  <maintainer email="oriol.martinez.fite@gmail.com">fetty</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!-- <build_depend>slam_msgs</build_depend> 
  <build_depend>path_interfaces</build_depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <!-- <exec_depend>slam_msgs</exec_depend>
  <exec_depend>path_interfaces</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
